First test don't run, this one yes. Include Materialze CDN links for CSS and JS (be sure to use the latets version)

--- a/views/src/index.pug
+++ b/views/src/index.pug
@@ -3,8 +3,8 @@ html(lang="fr")
     head
         include layout/head
     body
+
         header
 
         footer
-
-
+        include layout/bottom
