--- a/views/src/layout/head.pug
+++ b/views/src/layout/head.pug
@@ -2,14 +2,14 @@ title pageTitle
 
 //Import Google Icon Font
 link(href='http://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
-//Import materialize.css
-link(type='text/css' rel='stylesheet' href='../../_assets/css/materialize.min.css'  media='screen,projection')
+//Import materialize.css from CDN
+link(type='text/css' rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css'  media='screen,projection')
 //Import personnal style
 link(href='../../_assets/css/styles.css', rel='stylesheet')
 
-//Import jQuery
-script(type='text/javascript', src="https://code.jquery.com/jquery-3.1.1.min.js")
-//Import MAterialize
-script(type='text/javascript' src='../../_assets/js/materialize.min.js')
-//Import your own JS
-script(type='text/javascript', src='../../_assets/js-personal/common.js')
+////Import jQuery
+//script(type='text/javascript', src="https://code.jquery.com/jquery-3.1.1.min.js")
+////Import Materialize
+//script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js')
+////Import your own JS
+//script(type='text/javascript', src='../../_assets/js-common/common.js')
